修复编码转换问题